# ros2_ws

install/get_sensor_status/lib/get_sensor_status/: get_sensor_status_client  get_sensor_status_service
install/get_sensor_status/share/get_sensor_status/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/srvs/share/srvs/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/srvs/share/srvs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_srvs__rosidl_generator_cExport.cmake  export_srvs__rosidl_generator_pyExport-noconfig.cmake  export_srvs__rosidl_generator_pyExport.cmake  export_srvs__rosidl_typesupport_fastrtps_cExport.cmake  export_srvs__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  srvs__rosidl_typesupport_cExport-noconfig.cmake  srvs__rosidl_typesupport_cppExport.cmake  srvs__rosidl_typesupport_introspection_cExport-noconfig.cmake  srvs__rosidl_typesupport_introspection_cppExport-noconfig.cmake  srvs__rosidl_typesupport_introspection_cppExport.cmake
install/srvs/share/srvs/msg/: SensorStatus.idl  SensorStatus.msg
install/srvs/share/srvs/srv/: GetSensorStatusList.idl
log/: latest_build
src/: .gitignore
src/get_sensor_status/: CMakeLists.txt  package.xml
src/get_sensor_status/src/: client.cpp  service.cpp
src/srvs/: CMakeLists.txt
src/srvs/msg/: SensorType.msg
(+36 files in other folders)
